Fixed badge spacing bug on mobile

--- a/src/CSS/Pages/Projects.css
+++ b/src/CSS/Pages/Projects.css
@@ -205,7 +205,7 @@
     margin-right: 4px;
   }
   .BadgeSpacer#Meii{
-    margin-right: 16px;
+    margin-right: 0px;
     display: inline;
   }
   .BadgeSpacer#Trinity{
